--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "azureLogicAppsV2.deploySubpath": ".",
-    "azureLogicAppsV2.projectLanguage": "JavaScript",
+    "azureLogicAppsV2.deploySubpath": "bin/Release/netcoreapp3.1/publish",
+    "azureLogicAppsV2.projectLanguage": "C#",
     "azureLogicAppsV2.projectRuntime": "~3",
-    "debug.internalConsoleOptions": "neverOpen"
+    "debug.internalConsoleOptions": "neverOpen",
+    "azureLogicAppsV2.preDeployTask": "publish"
 }
